<resources>
    <string name="app_name">WhatsApp</string>

    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>

</resources>
