<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    <item android:id="@+id/action_status"
        android:orderInCategory="10"
        android:title="@string/action_status"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:orderInCategory="11"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/action_with_icon"
        android:orderInCategory="12"
        android:title="@string/action_with_icon"
        app:showAsAction="never"/>
    <item android:id="@+id/action_without_icon"
        android:orderInCategory="13"
        android:title="@string/action_without_icon"
        app:showAsAction="never"/>
    <item android:id="@+id/action_customtab"
        android:orderInCategory="14"
        android:title="@string/action_custom"
        app:showAsAction="never"/>
</menu>