<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_chat"
        android:title="@string/action_chat"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"/>
    <item android:id="@+id/action_new_group"
        android:title="@string/action_new_group"
        app:showAsAction="never"/>
    <item android:id="@+id/action_new_bc"
        android:title="@string/action_new_broadcast"
        app:showAsAction="never"/>
    <item android:id="@+id/action_web"
        android:title="@string/action_whatsapp_web"
        app:showAsAction="never"/>
    <item android:id="@+id/action_star"
        android:title="@string/action_starred_messages"
        app:showAsAction="never"/>
</menu>